--- a/resources/config/ai-context.yaml
+++ b/resources/config/ai-context.yaml
@@ -1,5 +1,6 @@
 ai_context:
     include:
         entities: true
-
-
+    output_dir: '%kernel.project_dir%/'
+    output_filename: 'ai-context.json'
+    #output_dir: '%kernel.project_dir%/var/' # Uncomment this line to use the var directory instead of the project root
