--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": ">=8.1",
         "symfony/framework-bundle": "^6.0 || ^7.0",
-        "doctrine/orm": "^2.12"
+        "doctrine/orm": "^2.12 || ^3.0"
     },
     "autoload": {
         "psr-4": {
