--- a/resources/config/ai-context.yaml
+++ b/resources/config/ai-context.yaml
@@ -1,12 +1,14 @@
 ai_context:
+    output_dir: '%kernel.project_dir%/'
+    output_filename: 'ai-context.json'
+    output_dir_checksum: '%kernel.project_dir%/var/ai-context/ai-context-checksum.json'
     include:
-        entities: true
         routes: true
+        entities: true
         services: true
+        controllers: true
     paths:
         entities: '%kernel.project_dir%/src/Entity'
         services: '%kernel.project_dir%/src/Service'
-    output_dir: '%kernel.project_dir%/'
-    output_filename: 'ai-context.json'
-    #output_dir: '%kernel.project_dir%/var/' # Uncomment this line to use the var directory instead of the project root
-    output_dir_checksum: '%kernel.project_dir%/var/ai-context/ai-context-checksum.json'
+        controllers: '%kernel.project_dir%/src/Controller'
+
