--- a/resources/config/ai-context.yaml
+++ b/resources/config/ai-context.yaml
@@ -7,8 +7,10 @@ ai_context:
         entities: true
         services: true
         controllers: true
+        repositories: true
     paths:
         entities: '%kernel.project_dir%/src/Entity'
         services: '%kernel.project_dir%/src/Service'
         controllers: '%kernel.project_dir%/src/Controller'
+        repository: '%kernel.project_dir%/src/Repository'
 
