--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,13 +25,13 @@ jobs:
                     extensions: mbstring, intl, pdo_sqlite
                     tools: composer
 
-            -   name: Cache Composer packages
-                uses: actions/cache@v4
-                with:
-                    path: vendor
-                    key: ${{ runner.os }}-php-${{ matrix.php }}-composer-${{ hashFiles('**/composer.lock') }}
-                    restore-keys: |
-                        ${{ runner.os }}-php-${{ matrix.php }}-composer-
+#            -   name: Cache Composer packages
+#                uses: actions/cache@v4
+#                with:
+#                    path: vendor
+#                    key: ${{ runner.os }}-php-${{ matrix.php }}-composer-${{ hashFiles('**/composer.lock') }}
+#                    restore-keys: |
+#                        ${{ runner.os }}-php-${{ matrix.php }}-composer-
 
             -   name: Install dependencies
                 run: composer install --no-interaction --prefer-dist --no-progress
