--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,11 @@
     "require": {
         "php": ">=8.2",
         "symfony/framework-bundle": "^6.0 || ^7.0",
-        "symfony/finder": "^6.0 || ^7.0",
-        "doctrine/orm": "^2.12 || ^3.0"
+        "symfony/finder": "^6.0 || ^7.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^10.0"
+        "phpunit/phpunit": "^10.0",
+        "doctrine/orm": "^3.3"
     },
     "autoload": {
         "psr-4": {
