--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "require-dev": {
         "phpunit/phpunit": "^10.0",
         "doctrine/orm": "^3.3",
-        "doctrine/doctrine-bundle": "^2.14"
+        "doctrine/doctrine-bundle": "^2.14",
+        "phpstan/phpstan": "^2.1"
     },
     "autoload": {
         "psr-4": {
