--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,8 @@ on:
         branches: [ main, dev ]
     pull_request:
         branches: [ main, dev ]
+    workflow_dispatch:
+
 jobs:
     tests:
         runs-on: ubuntu-latest
