--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "phpunit/phpunit": "^10.0",
         "doctrine/orm": "^3.3",
         "doctrine/doctrine-bundle": "^2.14",
-        "phpstan/phpstan": "^2.1"
+        "phpstan/phpstan": "^2.1",
+        "phpstan/phpstan-symfony": "^2.0"
     },
     "autoload": {
         "psr-4": {
