--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,12 @@
-name: Test (PHPUnit)
+name: Tests
 
 on:
     push:
         branches: [ main, dev ]
     pull_request:
         branches: [ main, dev ]
+    workflow_dispatch:
+
 jobs:
     tests:
         runs-on: ubuntu-latest
