--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,10 @@
     "require-dev": {
         "phpunit/phpunit": "^10.0",
         "doctrine/orm": "^3.3",
-        "doctrine/doctrine-bundle": "^2.14"
+        "doctrine/doctrine-bundle": "^2.14",
+        "phpstan/phpstan": "^2.1",
+        "phpstan/phpstan-symfony": "^2.0",
+        "phpstan/extension-installer": "^1.4"
     },
     "autoload": {
         "psr-4": {
@@ -28,12 +31,18 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "AiContextBundle\\Tests\\": "tests/"
+            "AiContextBundle\\Tests\\": "tests/",
+            "Symfony\\Component\\Security\\Http\\Attribute\\": "tests/PhpStanStubs/"
         }
     },
     "extra": {
         "branch-alias": {
             "dev-main": "1.0-dev"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "phpstan/extension-installer": true
         }
     }
 }
