Change Readme + default config

--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,14 @@
     "extra": {
         "branch-alias": {
             "dev-main": "1.0-dev"
+        },
+        "symfony": {
+            "bundle": {
+                "env": {
+                    "dev": true,
+                    "test": true
+                }
+            }
         }
     },
     "config": {
