--- a/resources/config/ai-context.yaml
+++ b/resources/config/ai-context.yaml
@@ -1,5 +1,5 @@
 ai_context:
-  output_dir: '%kernel.project_dir%/'
+  output_dir: %kernel.project_dir%/var/ai_context'
   output_filename: 'ai-context.json'
   output_dir_checksum: '%kernel.project_dir%/var/ai-context/ai-context-checksum.json'
   include:
